# graduation_project

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: sec.pc  test.pc
devel/lib/sec/: SVM_test  VideoTest.avi  open_video  sec
devel/lib/test/: out
devel/share/sec/cmake/: secConfig.cmake
devel/share/test/cmake/: testConfig.cmake
src/sec/: CMakeLists.txt  sec.kdev4
src/sec/.kdev4/: sec.kdev4
src/sec/src/: SVM_test.cpp  open_video.cpp  sec.cpp
src/test/: CMakeLists.txt
src/test/.kdev4/: test.kdev4
src/test/src/: out.cpp
